--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,5 +5,37 @@
 }
 
 body {
-    background-color: rgba(180, 0, 0, 0.815);
+    background-color: rgb(180, 0, 0);
+}
+
+.title {
+    top: 0;
+    position: sticky;
+}
+
+h1 {
+    padding: 10px 20px;
+    color: yellow;
+}
+
+#search {
+    padding: 5px;
+}
+
+.btn {
+    padding: 5px 20px;
+    color: yellow;
+}
+
+
+
+@media screen and (max-width: 640px) {
+    .title {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn {
+        opacity: 1;
+    }
 }
