--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
   --button-bg-color: #6074f3;
   --button-hover-bg-color: #3651fd;
   --button-text-color: #fff;
-  --box-shadow-color:#888;
+  --box-shadow-color: #888;
 }
 
 
@@ -115,22 +115,24 @@ a:hover {
   aspect-ratio: 1 / 1;
 }
 
-.poster__img-col {
-  width: 100%;
-  max-height: 268px;
+.giphy__img-col {
+  width: 300px;
   overflow: hidden;
 }
 
-.poster__img-col img {
-  object-fit: cover;
+.giphy__img-col img {
   object-fit: contain;
-  max-width: 100%;
-  max-height: 100%;
   width: 300px;
-  height: 300px;
 }
 
 .poster__body {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 13px;
+}
+
+.giphy__body {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -141,19 +143,36 @@ a:hover {
   font-size: 1.875rem;
 }
 
-.poster__intro {
+.giphy__title {
+  width: 100%;
+  height: 15px;
+  line-height: 15px;
+  padding: 10px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  white-space: nowrap;
+  margin-bottom: -30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background: var(--button-bg-color);
+}
+
+.poster__plot {
+  align-items: center;
   font-size: 1.4rem;
 }
 
-.poster-cols {
+.giphy-cols {
+  width: 300px;
   display: flex;
-  flex-flow: row wrap;
+  justify-content: space-around;
+  flex-direction: row;
   align-items: center;
   text-align: center;
   margin: 5px 0;
 }
 
-.poster-col {
+.giphy-col {
   flex: 1;
   margin: 2px;
   padding: 10px;
@@ -161,13 +180,13 @@ a:hover {
   transition: 0.3s;
 }
 
-.poster-col:first-child {
+.giphy-col:first-child {
   margin-left: 0;
   background-color: var(--background);
   box-shadow: 0px 4px 5px 0px var(--box-shadow-color);
 }
 
-.poster-col:last-child {
+.giphy-col:last-child {
   margin-left: 0;
   background-color: var(--background);
   box-shadow: 0px 4px 5px 0px var(--box-shadow-color);
@@ -182,44 +201,82 @@ a:hover {
   width: 100%;
 }
 
+.errorMessageEl {
+  width: 75%;
+  height: 250px;
+  font-size: auto;
+  line-height: 250px;
+  text-align: center;
+  background: var(--background);
+  padding: 30px;
+}
+
+.hidden {
+  display: none;
+}
+
 @media screen and (max-width: 980px) {
   .container {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .form__field {
-      width: 280px;
-      margin-bottom: 10px;
+    width: 280px;
+    margin-bottom: 10px;
 
   }
 
   .poster__card {
-      width: 100%;
+    width: 100%;
   }
 
-  .poster-cols .poster-col {
-      margin-bottom: 5px;
-      flex-basis: 40%;
+  .poster__title {
+    font-size: 1.4rem;
+  }
+  
+  .giphy-cols {
+    flex-direction: column;
   }
 
-  .poster-cols .poster-col:last-child {
-      flex-basis: 100%;
-      margin: 0;
+  .giphy-cols .giphy-col {
+    margin-bottom: 5px;
+    flex-basis: 40%;
   }
 
-  .poster-cols .poster-col:nth-last-child(2) {
-      margin-right: 0;
+  .giphy-cols .giphy-col:last-child {
+    flex-basis: 100%;
+    margin: 0;
+  }
+
+  .giphy-cols .giphy-col:nth-last-child(2) {
+    margin-right: 0;
   }
 
   .poster__footer {
-      flex-direction: column;
-      padding-left: 120px;
+    flex-direction: column;
+    padding-left: 120px;
+  }
+
+  .errorMessageEl {
+    font-size: 1.2rem;
   }
 }
 
 @media screen and (max-width: 680px) {
-  .poster-cols .poster-col {
-      margin: 0 0 5px 0;
-      flex-basis: 100%;
+  .poster__title {
+    font-size: 1.4rem;
+  }
+
+  .giphy-cols {
+    flex-direction: column;
+  }
+
+  .giphy-cols .giphy-col {
+    margin: 0 0 5px 0;
+    flex-basis: 100%;
+  }
+
+  .errorMessageEl {
+    font-size: .8rem;
   }
 }
