--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,29 +2,37 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    background-color: rgb(180, 0, 0);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .title {
     top: 0;
     position: sticky;
+    background-color: rgb(16, 80, 165);
+    margin: 10px;
+}
+
+.movie {
+    align-self: center;
+    background-color: rgb(245, 246, 250);
 }
 
 h1 {
-    padding: 10px 20px;
-    color: yellow;
+    padding: 20px 20px;
 }
 
 #search {
     padding: 5px;
+    height: 50px;
+    width: 350px;
 }
 
 .btn {
-    padding: 5px 20px;
+    padding: 5px 15px;
     color: rgb(0, 0, 0);
+    margin-left: -90px;
+    transition: all 100ms ease-in;
+    /* background-color: rgb(102, 100, 223); */
 }
 
 .error {
